--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <ul class="navbar">
         <li><a href="#">Home</a></li>
-        <li><a href="https://drive.google.com/file/d/1Nq8ub0Jtqp6DIDl2-ICJUltTLtPqlW5g/view?usp=sharing">Photos</a></li>
+        <li><a href="https://drive.google.com/drive/folders/1hr8Ymps4jsV9D9vloK88p6clrsTr0MTT?usp=share_link">Photos</a></li>
         <li><a href="https://docs.google.com/document/d/17b8m6e8mRdAr1Q_BersVNYhog18G6MN-/edit?usp=share_link&ouid=100409625665024137334&rtpof=true&sd=true">Projects</a></li>
         <li><a href="#">equpiments</a></li>
         <li><a href="#">Feedback</a></li>
